toby spring refactor WebApiExRateProvider